# real-wordpiece

./: README.md  pyproject.toml
.github/workflows/: run-tests.yaml
examples/: compare_to_hf_wordpiece.py  simple_training.py
src/real_wordpiece/: trainer.py
tests/: test_trainer.py
