[tool.poetry]
name = "real-wordpiece"
version = "0.1.7"
description = "A score-based implementation of WordPiece tokenization training, compatible with HuggingFace tokenizers."
authors = ["Kacper Łukawski <lukawski.kacper@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "real_wordpiece", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
tokenizers = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"
datasets = "^2.20.0"
pandas = "<2.2.2"
pyarrow = "<17.0.0"

[tool.pytest.ini_options]
minversion = "7.1"
pythonpath = [
    "src/"
]
testpaths = [
    "tests/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
